--- a/Themes/Glossy-Cyan/Glossy-Cyan.H.theme.css
+++ b/Themes/Glossy-Cyan/Glossy-Cyan.H.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Glossy Cyan","description":"Current Version: V3.3.4.Cyan","author":"HansAnonymous","version":"3.3.4.Cyan"}*//{}
+//META{"name":"Team Moley","description":"Current Version: V3.3.4.Cyan","author":"Tm Lumix","version":"3.3.4.Cyan"}*//{}
 
 /*
    ____ _                                ____                                                   
